# sales_brochure_ai

./: .env.example  README.md  pyproject.toml
notebooks/: brochure.ipynb
src/brochure_app/: __init__.py  llm.py  scraper.py
